--- a/framework/examples/ios-demo/HippyDemo/HomePage/HomePageView.xib
+++ b/framework/examples/ios-demo/HippyDemo/HomePage/HomePageView.xib
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="24093.7" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24053.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomePageViewController">
             <connections>
-                <outlet property="buttonView" destination="LEW-48-luF" id="KbE-Xz-eAw"/>
                 <outlet property="imageView" destination="HW1-mo-1mA" id="VS6-Uz-AAF"/>
-                <outlet property="pageButton" destination="66v-AF-pOS" id="tcN-zN-mMF"/>
-                <outlet property="settingButton" destination="709-BQ-ZUp" id="ISQ-NI-98a"/>
+                <outlet property="pageItem" destination="VVX-vW-LHf" id="WkN-BE-ghp"/>
+                <outlet property="settingItem" destination="sEH-6f-Z8v" id="E7w-Ws-h6g"/>
+                <outlet property="tabbar" destination="c0k-ql-Jwx" id="8Ec-nU-LeH"/>
                 <outlet property="tipsImageView" destination="vYm-6O-h8u" id="p7G-jt-00K"/>
                 <outlet property="verLabel" destination="9uc-aF-XIf" id="7Hh-6P-kns"/>
                 <outlet property="view" destination="iN0-l3-epB" id="Fhb-dU-A36"/>
@@ -25,7 +25,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HW1-mo-1mA">
-                    <rect key="frame" x="76.666666666666686" y="170" width="240" height="68"/>
+                    <rect key="frame" x="76.666666666666686" y="229" width="240" height="68"/>
                     <accessibility key="accessibilityConfiguration">
                         <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                     </accessibility>
@@ -35,7 +35,7 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is Hippy Demo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r7z-Cr-aKI">
-                    <rect key="frame" x="76.666666666666686" y="269" width="240" height="24"/>
+                    <rect key="frame" x="76.666666666666686" y="328" width="240" height="24"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="240" id="SJm-ZD-0Q8"/>
                         <constraint firstAttribute="height" constant="24" id="sUo-IN-lVG"/>
@@ -45,7 +45,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ver:3.0.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9uc-aF-XIf">
-                    <rect key="frame" x="76.666666666666686" y="314" width="240" height="24"/>
+                    <rect key="frame" x="76.666666666666686" y="373" width="240" height="24"/>
                     <accessibility key="accessibilityConfiguration">
                         <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                     </accessibility>
@@ -58,7 +58,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="提供极致流畅体验的可复用列表，通过binding模式实现高效的前端-终端通讯。" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4a-qT-dhe">
-                    <rect key="frame" x="68.666666666666686" y="375" width="256" height="53"/>
+                    <rect key="frame" x="68.666666666666686" y="434" width="256" height="53"/>
                     <accessibility key="accessibilityConfiguration">
                         <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                     </accessibility>
@@ -70,41 +70,17 @@
                     <color key="textColor" red="0.63137254901960782" green="0.67450980392156867" blue="0.74117647058823533" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LEW-48-luF">
-                    <rect key="frame" x="0.0" y="737" width="393" height="115"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="headTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66v-AF-pOS">
-                            <rect key="frame" x="61" y="0.0" width="100" height="69"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="15"/>
-                            <inset key="titleEdgeInsets" minX="-30" minY="35" maxX="0.0" maxY="0.0"/>
-                            <inset key="imageEdgeInsets" minX="30" minY="5" maxX="30" maxY="25"/>
-                            <state key="normal" title="New Page">
-                                <color key="titleColor" red="0.29019607843137252" green="0.34901960784313724" blue="0.4392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </state>
-                            <connections>
-                                <action selector="toNewPage" destination="-1" eventType="touchUpInside" id="A3G-Gw-6at"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="709-BQ-ZUp" userLabel="Settings">
-                            <rect key="frame" x="248" y="0.0" width="100" height="69"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="15"/>
-                            <inset key="titleEdgeInsets" minX="-37" minY="35" maxX="0.0" maxY="0.0"/>
-                            <inset key="imageEdgeInsets" minX="30" minY="5" maxX="30" maxY="25"/>
-                            <state key="normal" title="Settings">
-                                <color key="titleColor" red="0.29019607843137252" green="0.34901960784313724" blue="0.4392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </state>
-                            <connections>
-                                <action selector="toSetting" destination="-1" eventType="touchUpInside" id="8F3-aq-AQ9"/>
-                            </connections>
-                        </button>
-                    </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </view>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vYm-6O-h8u">
-                    <rect key="frame" x="37" y="708" width="150" height="35"/>
+                <tabBar contentMode="scaleToFill" id="c0k-ql-Jwx">
+                    <rect key="frame" x="0.0" y="701" width="393" height="83"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <items>
+                        <tabBarItem title="New Page" image="NewPage" selectedImage="NewPageSelected" id="VVX-vW-LHf"/>
+                        <tabBarItem title="Settings" image="Setting" selectedImage="SettingSelected" id="sEH-6f-Z8v"/>
+                    </items>
+                </tabBar>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="TipsImage" translatesAutoresizingMaskIntoConstraints="NO" id="vYm-6O-h8u">
+                    <rect key="frame" x="76" y="649" width="150" height="35"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                 </imageView>
             </subviews>
@@ -123,4 +99,11 @@
             <point key="canvasLocation" x="130.53435114503816" y="-11.267605633802818"/>
         </view>
     </objects>
+    <resources>
+        <image name="NewPage" width="24" height="24"/>
+        <image name="NewPageSelected" width="24" height="24"/>
+        <image name="Setting" width="24" height="24"/>
+        <image name="SettingSelected" width="24" height="24"/>
+        <image name="TipsImage" width="136" height="36"/>
+    </resources>
 </document>
