--- a/framework/examples/ios-demo/HippyDemo/HomePage/HomePageView.xib
+++ b/framework/examples/ios-demo/HippyDemo/HomePage/HomePageView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="24093.7" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="24127" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24053.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24063"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -25,53 +25,43 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HW1-mo-1mA">
-                    <rect key="frame" x="76.666666666666686" y="229" width="240" height="68"/>
+                    <rect key="frame" x="76.666666666666671" y="229" width="239.66666666666663" height="68"/>
                     <accessibility key="accessibilityConfiguration">
                         <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                     </accessibility>
                     <constraints>
-                        <constraint firstAttribute="width" constant="240" id="0hC-bK-AQ4"/>
-                        <constraint firstAttribute="height" constant="68" id="3Ma-LQ-gQp"/>
+                        <constraint firstAttribute="height" constant="68" id="HqU-Hq-xgG"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is Hippy Demo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r7z-Cr-aKI">
-                    <rect key="frame" x="76.666666666666686" y="328" width="240" height="24"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="240" id="SJm-ZD-0Q8"/>
-                        <constraint firstAttribute="height" constant="24" id="sUo-IN-lVG"/>
-                    </constraints>
+                    <rect key="frame" x="76.666666666666671" y="328" width="239.66666666666663" height="24"/>
                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="17"/>
                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ver:3.0.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9uc-aF-XIf">
-                    <rect key="frame" x="76.666666666666686" y="373" width="240" height="24"/>
+                    <rect key="frame" x="76.666666666666671" y="373" width="239.66666666666663" height="24"/>
                     <accessibility key="accessibilityConfiguration">
                         <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                     </accessibility>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="240" id="J2v-U6-2s2"/>
-                        <constraint firstAttribute="height" constant="24" id="leO-LW-5rG"/>
-                    </constraints>
                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="17"/>
                     <color key="textColor" red="0.63137254901960782" green="0.67450980392156867" blue="0.74117647058823533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="提供极致流畅体验的可复用列表，通过binding模式实现高效的前端-终端通讯。" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4a-qT-dhe">
-                    <rect key="frame" x="68.666666666666686" y="434" width="256" height="53"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="提供极致流畅体验的可复用列表，通过binding模式实现高效的前端-终端通讯。" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4a-qT-dhe">
+                    <rect key="frame" x="60" y="434" width="273" height="53"/>
                     <accessibility key="accessibilityConfiguration">
                         <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                     </accessibility>
                     <constraints>
-                        <constraint firstAttribute="width" constant="256" id="gKv-9S-ay4"/>
-                        <constraint firstAttribute="height" constant="53" id="lpe-Ef-aq1"/>
+                        <constraint firstAttribute="height" constant="53" id="4cU-4v-79X"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                     <color key="textColor" red="0.63137254901960782" green="0.67450980392156867" blue="0.74117647058823533" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <tabBar contentMode="scaleToFill" id="c0k-ql-Jwx">
-                    <rect key="frame" x="0.0" y="701" width="393" height="83"/>
+                    <rect key="frame" x="0.0" y="769" width="393" height="83"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <items>
@@ -79,22 +69,31 @@
                         <tabBarItem title="Settings" image="Setting" selectedImage="SettingSelected" id="sEH-6f-Z8v"/>
                     </items>
                 </tabBar>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="TipsImage" translatesAutoresizingMaskIntoConstraints="NO" id="vYm-6O-h8u">
-                    <rect key="frame" x="76" y="649" width="150" height="35"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="TipsImage" translatesAutoresizingMaskIntoConstraints="NO" id="vYm-6O-h8u">
+                    <rect key="frame" x="60" y="704" width="136" height="36"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="36" id="NyN-9v-pwT"/>
+                        <constraint firstAttribute="width" constant="136" id="uMM-rT-M6i"/>
+                    </constraints>
                 </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="r7z-Cr-aKI" firstAttribute="top" secondItem="HW1-mo-1mA" secondAttribute="bottom" constant="31" id="0Xi-fo-MyK"/>
-                <constraint firstItem="HW1-mo-1mA" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="111" id="1rq-Kx-TPh"/>
-                <constraint firstItem="h4a-qT-dhe" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="ONl-sl-aG5"/>
-                <constraint firstItem="h4a-qT-dhe" firstAttribute="top" secondItem="9uc-aF-XIf" secondAttribute="bottom" constant="37" id="Svt-iG-bIZ"/>
-                <constraint firstItem="HW1-mo-1mA" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="XFK-Nk-jyd"/>
-                <constraint firstItem="9uc-aF-XIf" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="gkF-KS-swA"/>
-                <constraint firstItem="9uc-aF-XIf" firstAttribute="top" secondItem="r7z-Cr-aKI" secondAttribute="bottom" constant="21" id="l3u-uN-SGU"/>
-                <constraint firstItem="r7z-Cr-aKI" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="qNW-yl-rE7"/>
+                <constraint firstItem="r7z-Cr-aKI" firstAttribute="leading" secondItem="9uc-aF-XIf" secondAttribute="leading" id="Bl6-Kg-wCn"/>
+                <constraint firstItem="r7z-Cr-aKI" firstAttribute="top" secondItem="HW1-mo-1mA" secondAttribute="bottom" constant="31" id="Cjm-aW-V0w"/>
+                <constraint firstItem="9uc-aF-XIf" firstAttribute="centerX" secondItem="h4a-qT-dhe" secondAttribute="centerX" id="Meo-vu-dIH"/>
+                <constraint firstItem="vYm-6O-h8u" firstAttribute="bottom" secondItem="c0k-ql-Jwx" secondAttribute="top" constant="-12" id="Sux-K2-qdh"/>
+                <constraint firstItem="HW1-mo-1mA" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="76.666666666666686" id="WM5-je-RTv"/>
+                <constraint firstItem="HW1-mo-1mA" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="111" id="Yje-Ir-Qtu"/>
+                <constraint firstItem="h4a-qT-dhe" firstAttribute="top" secondItem="9uc-aF-XIf" secondAttribute="bottom" constant="37" id="a6M-Ev-nS0"/>
+                <constraint firstItem="9uc-aF-XIf" firstAttribute="top" secondItem="r7z-Cr-aKI" secondAttribute="bottom" constant="21" id="fVK-cn-Jyr"/>
+                <constraint firstItem="r7z-Cr-aKI" firstAttribute="trailing" secondItem="9uc-aF-XIf" secondAttribute="trailing" id="gAN-Ah-jMd"/>
+                <constraint firstItem="h4a-qT-dhe" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="60" id="nep-Ec-4fK"/>
+                <constraint firstAttribute="trailing" secondItem="h4a-qT-dhe" secondAttribute="trailing" constant="60" id="sgw-nK-ugH"/>
+                <constraint firstItem="HW1-mo-1mA" firstAttribute="leading" secondItem="r7z-Cr-aKI" secondAttribute="leading" id="syl-WF-pMy"/>
+                <constraint firstItem="vYm-6O-h8u" firstAttribute="centerX" secondItem="c0k-ql-Jwx" secondAttribute="centerX" constant="-68.5" id="u7G-pn-Mde"/>
+                <constraint firstItem="HW1-mo-1mA" firstAttribute="trailing" secondItem="r7z-Cr-aKI" secondAttribute="trailing" id="z3N-2i-obW"/>
             </constraints>
             <point key="canvasLocation" x="130.53435114503816" y="-11.267605633802818"/>
         </view>
